avance en auth con jwt y spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 
 spring.datasource.url=jdbc:postgresql://pi-ati-ort-database.c2d2n3ecnlpg.us-east-1.rds.amazonaws.com:5432/pidatabase
 spring.datasource.username=piatiort
@@ -13,3 +13,9 @@ spring.jpa.defer-datasource-initialization=true
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/sw-api.html
+
+spring.security.user.name=piatiort
+spring.security.user.password=tesis2023
+
+jwt.secret=mySecretKey
+jwt.expiration=36000
