--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,11 @@
             <version>2.2.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>7.0.2.Final</version> <!-- Use the latest version available -->
+        </dependency>
 
     </dependencies>
 
