--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.org.springframework=DEBUG
 
+server.port=8081
+
 spring.datasource.url=jdbc:postgresql://pi-ati-ort-database.c2d2n3ecnlpg.us-east-1.rds.amazonaws.com:5432/pidatabase
 spring.datasource.username=piatiort
 spring.datasource.password=tesis2023
