--- a/.github/workflows/github-action-azure-deploy.yml
+++ b/.github/workflows/github-action-azure-deploy.yml
@@ -1,38 +1,38 @@
-name: Backend Proyecto Integrador
-on: push
-env:
-  ASC_PACKAGE_PATH: ${{ github.workspace }}
-  JAVA_VERSION: 17
-  AZURE_SUBSCRIPTION: 3c15010d-1aa0-4fad-adc3-8cd4abfad005
-
-jobs:
-  deploy_to_production:
-    runs-on: ubuntu-latest
-    name: deploy to production with artifact
-    steps:
-      - name: Checkout Github Action
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-
-      - name: maven build, clean
-        run: |
-          mvn clean package -DskipTests
-
-      - name: Login via Azure CLI
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: deploy to production with artifact
-        uses: azure/spring-cloud-deploy@v1
-        with:
-          azure-subscription: ${{ env.AZURE_SUBSCRIPTION }}
-          action: Deploy
-          service-name: pi-ati-back
-          app-name: backend
-          use-staging-deployment: false
-          package: ${{ env.ASC_PACKAGE_PATH }}/target/back-0.0.1-SNAPSHOT.jar
+#name: Backend Proyecto Integrador
+#on: push
+#env:
+#  ASC_PACKAGE_PATH: ${{ github.workspace }}
+#  JAVA_VERSION: 17
+#  AZURE_SUBSCRIPTION: 3c15010d-1aa0-4fad-adc3-8cd4abfad005
+#
+#jobs:
+#  deploy_to_production:
+#    runs-on: ubuntu-latest
+#    name: deploy to production with artifact
+#    steps:
+#      - name: Checkout Github Action
+#        uses: actions/checkout@v2
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: ${{ env.JAVA_VERSION }}
+#
+#      - name: maven build, clean
+#        run: |
+#          mvn clean package -DskipTests
+#
+#      - name: Login via Azure CLI
+#        uses: azure/login@v1
+#        with:
+#          creds: ${{ secrets.AZURE_CREDENTIALS }}
+#
+#      - name: deploy to production with artifact
+#        uses: azure/spring-cloud-deploy@v1
+#        with:
+#          azure-subscription: ${{ env.AZURE_SUBSCRIPTION }}
+#          action: Deploy
+#          service-name: pi-ati-back
+#          app-name: backend
+#          use-staging-deployment: false
+#          package: ${{ env.ASC_PACKAGE_PATH }}/target/back-0.0.1-SNAPSHOT.jar
