update con nueva base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,13 @@ logging.level.org.springframework=DEBUG
 
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://pi-ati-ort-database.c2d2n3ecnlpg.us-east-1.rds.amazonaws.com:5432/pidatabase
-spring.datasource.username=piatiort
-spring.datasource.password=tesis2023
+spring.datasource.url=jdbc:postgresql://pidb.c5i2i6o6q7jl.us-east-1.rds.amazonaws.com:5432/pidb
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=Tesis2023
 #Not needed, selected by default
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
